syntax = "proto3";

package pb;

import "refresh_token/refresh_token.proto";

option go_package = "github.com/Streamfair/streamfair_token_svc/pb/refresh_token";

message GetRefreshTokenByIDRequest {
    int64 id = 1;
}

message GetRefreshTokenByIDResponse {
    RefreshToken refresh_token = 1;
}